--- a/GameCollector/Base.lproj/Main.storyboard
+++ b/GameCollector/Base.lproj/Main.storyboard
@@ -1,14 +1,80 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2x5-EH-uxJ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Game View Controller-->
+        <scene sceneID="oRq-au-VIC">
+            <objects>
+                <viewController id="9AT-zK-hza" customClass="GameViewController" customModule="GameCollector" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TC4-sg-gah"/>
+                        <viewControllerLayoutGuide type="bottom" id="25Z-eN-CRX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lbi-v4-zgG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KH.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5ku-xN-XS6">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="0mP-NA-lh5"/>
+                                    <constraint firstAttribute="width" constant="280" id="OSK-1r-fyh"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dWS-Ny-52J">
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QdB-e0-GbI">
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addTapped:" destination="9AT-zK-hza" eventType="touchUpInside" id="rSN-uT-7q4"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5ku-xN-XS6" firstAttribute="centerX" secondItem="Lbi-v4-zgG" secondAttribute="centerX" id="Owh-uW-DhS"/>
+                            <constraint firstItem="dWS-Ny-52J" firstAttribute="width" secondItem="5ku-xN-XS6" secondAttribute="width" id="TPq-0z-Sde"/>
+                            <constraint firstItem="5ku-xN-XS6" firstAttribute="top" secondItem="TC4-sg-gah" secondAttribute="bottom" constant="30" id="bN6-kB-Uly"/>
+                            <constraint firstItem="dWS-Ny-52J" firstAttribute="top" secondItem="5ku-xN-XS6" secondAttribute="bottom" constant="30" id="hyB-CL-PWf"/>
+                            <constraint firstItem="dWS-Ny-52J" firstAttribute="centerX" secondItem="Lbi-v4-zgG" secondAttribute="centerX" id="tTP-A0-WPM"/>
+                            <constraint firstItem="QdB-e0-GbI" firstAttribute="centerX" secondItem="Lbi-v4-zgG" secondAttribute="centerX" id="wjj-31-Lm9"/>
+                            <constraint firstItem="QdB-e0-GbI" firstAttribute="top" secondItem="dWS-Ny-52J" secondAttribute="bottom" constant="20" id="ybA-cd-TXu"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="o11-ee-zsj">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="7qm-GZ-sNN">
+                                <connections>
+                                    <action selector="cameraTapped:" destination="9AT-zK-hza" id="S6G-rG-XOu"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Photos" id="ykW-up-Vd0">
+                                <connections>
+                                    <action selector="photosTapped:" destination="9AT-zK-hza" id="JJV-Cu-Idy"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="gameImageView" destination="5ku-xN-XS6" id="CW5-JE-Yyo"/>
+                        <outlet property="titleTextField" destination="dWS-Ny-52J" id="0m5-fe-csr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NA4-ks-ypZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1866" y="139"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="GameCollector" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +82,54 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0rj-Ef-wjJ">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="0rj-Ef-wjJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4Fd-ie-w4L"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0rj-Ef-wjJ" secondAttribute="bottom" id="YLM-IM-mwS"/>
+                            <constraint firstItem="0rj-Ef-wjJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fH0-re-rPi"/>
+                            <constraint firstAttribute="trailing" secondItem="0rj-Ef-wjJ" secondAttribute="trailing" id="sYs-1u-NBS"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="t37-OT-7UT">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="wBg-du-NkK">
+                            <connections>
+                                <segue destination="9AT-zK-hza" kind="show" id="dSY-1E-Xjc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="0rj-Ef-wjJ" id="WeA-gB-ufa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="byw-Cg-Fsb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2x5-EH-uxJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sey-4s-dFc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="7n3-Oq-Q5p"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S8j-0j-NDM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="263" y="139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="KH.jpg" width="1600" height="1200"/>
+    </resources>
 </document>
